clenup before export db to other machine
