# src/api/openapi.yaml
@@ -2,60 +2,35 @@ openapi: 3.0.3
 info:
   title: API for project 3d-inventory
   description: Run CRUD od 3d-inventory data model.
-  version: 1.0.3
+  version: 1.0.5
 servers:
-  # Added by API Auto Mocking Plugin
-  - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/karol-preiskorn/ultima-rest/1.0.3
-  - url: 'http://localhost:8080'
-    description: 3d-inventory-oracle-api
-
+- url: https://virtserver.swaggerhub.com/karol-preiskorn/ultima-rest/1.0.3
+  description: SwaggerHub API Auto Mocking
+- url: http://localhost:8080
+  description: 3d-inventory-oracle-api
 paths:
-  /device/{deviceId}:
+  /device:
     get:
-      summary:
-        Get Device Id
-      description:
-        Get list devices.
+      summary: Get devices
+      description: Get list devices.
       operationId: deviceGET
-      parameters:
-      - name: deviceId
-        in: path
-        required: true
-        description: Parameter deviceId is string uuid
-        schema:
-          type : string
       responses:
-        '200':
+        "200":
           description: List of devices
           content:
             application/json:
               schema:
-                type: array
                 $ref: '#/components/schemas/Device'
-        '404':
+        "404":
           description: Devices not found
           content:
             application/json:
               schema:
-                type: array
                 $ref: '#/components/schemas/Device'
       x-swagger-router-controller: Default
-      tags:
-        - device
-
     put:
-      summary:
-        "Update new device"
-      description:
-        Update device.
-      parameters:
-      - name: deviceId
-        in: path
-        required: true
-        description: Parameter deviceId is string uuid
-        schema:
-          type : string
+      summary: Update device
+      description: Update existing device.
       operationId: devicePUT
       requestBody:
         content:
@@ -63,33 +38,23 @@ paths:
             schema:
               $ref: '#/components/schemas/Device'
       responses:
-        '200':
+        "200":
           description: Ok
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Device'
-        '404':
-          description: No found
+        "404":
+          description: Update not found device
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
       x-swagger-router-controller: Default
-      tags:
-        - device
-
     post:
       summary: Create new device
-      description: Create device.
+      description: Insert new device.
       operationId: devicePOST
-      parameters:
-      - name: deviceId
-        in: path
-        required: true
-        description: Parameter deviceId is string uuid
-        schema:
-          type : string
       requestBody:
         content:
           application/json:
@@ -98,7 +63,7 @@ paths:
             example:
               $ref: '#/components/schemas/Device/example'
       responses:
-        '200':
+        "200":
           description: Ok
           content:
             application/json:
@@ -106,7 +71,7 @@ paths:
                 $ref: '#/components/schemas/Device'
               example:
                 $ref: '#/components/schemas/Device/example'
-        '500':
+        "500":
           description: Error device not created
           content:
             application/json:
@@ -115,45 +80,27 @@ paths:
               example:
                 $ref: '#/components/schemas/Error'
       x-swagger-router-controller: Default
-      tags:
-        - device
-
     delete:
-      summary: Insert new device
-      description: Create device.
-      parameters:
-        - name: deviceId
-          in: path
-          required: true
-          description: Parameter deviceId is string uuid
-          schema:
-            type : string
+      summary: Delete device
+      description: Delete device.
       operationId: deviceDELETE
       responses:
-        '200':
+        "200":
           description: OK
+        "404":
+          description: Not found device to delete
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
       x-swagger-router-controller: Default
-      tags:
-        - device
-
-  /log/{logId}:
+  /log:
     get:
-      summary:
-        Get log from database
-      description:
-        Get all log.
-      parameters:
-        - name: logId
-          in: path
-          required: true
-          description: Parameter logId is number of log
-          schema:
-            type : integer
-            format: int64
-            minimum: 1
+      summary: Get log from database
+      description: Get all log.
       operationId: logGET
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -161,76 +108,39 @@ paths:
                 $ref: '#/components/schemas/Log'
               examples:
                 id:
-                  value: '222'
+                  value: "222"
                 date:
-                  value: '2023-03-12'
+                  value: 2023-03-12
                 message:
-                  value: 'Message in log'
-              x-swagger-router-controller: Default
-        '404':
+                  value: Message in log
+        "404":
           description: No found
           content:
             application/json:
               schema:
                 $ref: '#/components/responses/404'
-              x-swagger-router-controller: Default
-        '500':
+        "500":
           description: Error
           content:
             application/json:
               schema:
                 $ref: '#/components/responses/5XX'
-              x-swagger-router-controller: Default
-      tags:
-        - log
-
+      x-swagger-router-controller: Default
     put:
-      summary:
-        Update new log
-      description:
-        Update log record.
-      parameters:
-        - name: logId
-          in: path
-          required: true
-          description: Parameter logId is number of log
-          schema:
-            type : integer
-            format: int64
-            minimum: 1
+      summary: Update new log
+      description: Update log record.
       operationId: logPUT
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Log'
-              examples:
-                id:
-                  value: '222'
-                date:
-                  value: '2023-03-12'
-                message:
-                  value: 'Message in log'
       x-swagger-router-controller: Default
-      tags:
-        - log
-
     post:
-      summary:
-        Insert new log
-      description:
-        Create log.
-      parameters:
-        - name: logId
-          in: path
-          required: true
-          description: Parameter logId is number of log
-          schema:
-            type : integer
-            format: int64
-            minimum: 1
+      summary: Insert new log
+      description: Create log.
       operationId: logPOST
       requestBody:
         content:
@@ -239,7 +149,7 @@ paths:
               $ref: '#/components/schemas/Log'
         required: true
       responses:
-        '200':
+        "200":
           description: Ok
           content:
             application/json:
@@ -247,7 +157,7 @@ paths:
                 $ref: '#/components/schemas/Log'
               example:
                 $ref: '#/components/schemas/Log/example'
-        '500':
+        "500":
           description: Error log not created
           content:
             application/json:
@@ -255,123 +165,81 @@ paths:
                 $ref: '#/components/schemas/Log'
               example:
                 $ref: '#/components/responses/5XX'
-        '404':
+        "404":
           description: Error log not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Log'
       x-swagger-router-controller: Default
-      tags:
-        - log
-
     delete:
       summary: Delete log
-      description: Delete all or specyfic id log.
-      parameters:
-        - name: logId
-          in: path
-          required: true
-          description: Parameter logId is number of log
-          schema:
-            type : integer
-            format: int64
-            minimum: 1
+      description: Delete all or specific id log.
       operationId: logDELETE
       responses:
-        '200':
+        "200":
           description: OK
+        "404":
+          description: Error log not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Log'
       x-swagger-router-controller: Default
-      tags:
-        - log
-
   /connections:
     get:
-      summary: >-
-        Server heartbeat operation. Get information about connection between Devices.
+      summary: Server heartbeat operation. Get information about connection between
+        Devices.
       description: Connection between devices
       operationId: connectionsGET
       responses:
-        '200':
+        "200":
           description: OK
       x-swagger-router-controller: Default
-      tags:
-        - connection
-
   /attributes:
     get:
       description: Devices attributes
+      operationId: attributesGET
       responses:
-        '200':
+        "200":
           description: OK
       x-swagger-router-controller: Default
-      tags:
-        - attributes
-
-  /attributes_types:
+  /attributedictionary:
     get:
-      summary: >-
-        Server heartbeat operation. Get information about devices attributes types.
+      summary: Server heartbeat operation. Get information about devices attributes
+        types.
       description: Dictionary attributes types of specific type of device.
       operationId: attributes_typesGET
       responses:
-        '200':
+        "200":
           description: OK
       x-swagger-router-controller: Default
-      tags:
-        - attributes
-
 components:
-
   schemas:
-
     Device:
       required:
-        - device_id
-        - device_name
+      - device_id
+      - device_name
       type: object
       properties:
         device_id:
           type: string
+          description: Device id uuid
         device_name:
           type: string
+          description: Device name
         device_category:
           type: string
+          description: Device category
         device_type:
           type: string
+          description: Device type
+      description: Device
       example:
-        - device_name: device-A1
-          device_id: 91601de6-6e93-11ed-a1eb-0242ac120002
-          device_type: Server
-          device_category: Network
-
-    DeviceArray:
-      required:
-        - device_id
-        - device_name
-      type: array
-      items:
-        type: object
-        properties:
-          device_id:
-            type: string
-          device_name:
-            type: string
-          device_category:
-            type: string
-          device_type:
-            type: string
-        example:
-          - device_name: device-A1
-            device_id: 91601de6-6e93-11ed-a1eb-0242ac120002
-            device_type: Server
-            device_category: Network
-          - device_name: dev-2
-            device_id: 91eweqweqwe601de6-6e93-11ed-a1eb-0242ac120002
-            device_type: Router
-            device_category: Network
-      description: List of devices
-
+        device_id: 91601de6-6e93-11ed-a1eb-0242ac120002
+        device_name: device-A1
+        device_category: Network
+        device_type: Server
     Error:
       type: object
       properties:
@@ -381,56 +249,54 @@ components:
           type: string
         offset:
           type: string
-      example:
-        errNum: '404'
-        message: 'Error example app not work...'
-        offset: 'line 10022'
       description: Universal Oracle error logs from database
-
+      example:
+        errNum: "404"
+        message: Error example app not work...
+        offset: line 10022
     Log:
-      type: object
       required:
-        - id
-        - date
-        - message
+      - date
+      - id
+      - message
+      type: object
       properties:
         id:
           type: string
-          description: Incemential log Id
+          description: Incremental log Id
         date:
           type: string
           description: Date as string
         message:
           type: string
           description: Log message
+      description: Save information about application upstage
       example:
-        id: '102'
-        date: '2023-03-12 14:00'
-        message: 'Meaasge in log'
-      description: Save information about application upsage
-
+        id: "102"
+        date: 2023-03-12 14:00
+        message: Message in log
   responses:
-    '200':
+    "200":
       description: OK
-    '400':
+    "400":
       description: Bad request. User ID must be an integer and larger than 0.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
-    '401':
+    "401":
       description: Authorization information is missing or invalid.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
-    '404':
+    "404":
       description: Not found
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
-    5XX:
+    "5XX":
       description: Unexpected error
       content:
         application/json:
